// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Preparation: Index BindData should prepare showcase data 1`] = `
Object {
  "articles": Array [
    Object {
      "__v": 0,
      "_id": "aaa26b456f8073766713bcef",
      "createdAt": 2018-04-02T17:41:25.642Z,
      "createdBy": Object {
        "firstName": "Maitland",
        "lastName": "McConnell",
      },
      "displayOnExplorePage": true,
      "displayOnTeamPage": true,
      "isArticle": true,
      "pageTitle": "Public Article",
      "parsedBody": "<p>Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane&#39;s-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.</p>
",
      "published": true,
      "rawBody": "Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane's-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.",
      "slug": "public-article",
      "state": "approved",
      "team": Object {
        "subdomain": "glitter",
      },
      "updatedAt": 2018-04-02T17:43:35.176Z,
      "website": Object {
        "slug": "user",
      },
    },
  ],
  "currentInsightsPage": 1,
  "currentVizPage": 1,
  "displayTitleOverrides": Object {
    "teamName": "Team",
    "vizName": "Visualization",
  },
  "env": Object {
    "DO_S3_BUCKET": "arraystesting",
    "FE_LIVERELOAD": "true",
    "FE_UNPROCESSEDCSS": "true",
    "MIXPANEL_TOKEN": "test",
    "NODE_ENV": "testing",
  },
  "filterObj": Object {},
  "globalLibraries": Array [
    "vendors/jquery/dist/jquery.min.js",
  ],
  "has_google_analytics": false,
  "insights": Array [
    Object {
      "__v": 0,
      "_id": "5b07dda988cb1bf4d76b64bd",
      "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      "createdAt": 2018-05-25T09:55:53.574Z,
      "createdBy": Object {
        "__v": 0,
        "_articleEditors": Array [],
        "_articleViewers": Array [],
        "_editors": Array [],
        "_id": "5a42bf07d3bc0b20648290e0",
        "_siteEditors": Array [],
        "_siteViewers": Array [],
        "_team": Array [
          "5a42bf30d3bc0b20648290e1",
        ],
        "_viewers": Array [],
        "activated": true,
        "active": true,
        "canCreateNewArticle": Array [],
        "canCreateNewSite": Array [],
        "canCreateNewViz": Array [],
        "createdAt": 2017-12-26T21:28:39.946Z,
        "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
        "email": "user@schemadesign.com",
        "firstName": "Maitland",
        "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
        "lastName": "McConnell",
        "lockUntil": 1,
        "loginAttempts": 0,
        "provider": "local",
        "salt": "test",
        "sampleImported": false,
        "signedUp": false,
        "updatedAt": 2017-12-26T21:36:31.420Z,
      },
      "datasourceDescription": Object {
        "JSONPath": "undefined",
        "__v": 0,
        "_id": "5a42c26e303770207ce8f83b",
        "_otherSources": Array [],
        "_team": Object {
          "__v": 0,
          "_id": "5a42bf30d3bc0b20648290e1",
          "admin": Array [
            "5a42bf07d3bc0b20648290e0",
          ],
          "brandColor": Object {
            "label": "#2A2A2A",
            "select": "#2A2A2A",
          },
          "colorPalette": Array [
            "#1B6DFC",
            "#0CB7FA",
            "#FA79FC",
            "#FB3705",
            "#F9D307",
            "#FA9007",
            "#7D5807",
            "#B2E606",
            "#069908",
            "#7B07FD",
          ],
          "createdAt": 2017-12-26T21:29:20.384Z,
          "datasourceDescriptions": Array [
            "5a42c26e303770207ce8f83b",
            "5b033d64ef29594d18bb18aa",
          ],
          "font": "calibre",
          "hasEnterpriseLicense": false,
          "pages": Array [
            "5ac26b456f8073766713bcee",
            "5ac26b3d6f8073766713bced",
            "5ac26b506f8073766713bcef",
            "5ac26b636f8073766713bcf0",
            "aaa26b456f8073766713bcee",
          ],
          "sites": Array [],
          "subdomain": "glitter",
          "superTeam": true,
          "title": "Glitter",
          "updatedAt": 2017-12-26T21:43:10.717Z,
        },
        "author": "5a42bf07d3bc0b20648290e0",
        "brandColor": Object {
          "accent": "#005CB5",
        },
        "clones": 0,
        "columns": Array [
          Object {
            "data_type": "Text",
            "name": "Image URL",
            "operation": "ToString",
          },
          Object {
            "data_type": "Number",
            "name": "Max HP",
            "operation": "ToInteger",
          },
          Object {
            "data_type": "Number",
            "name": "Max CP",
            "operation": "ToInteger",
          },
          Object {
            "data_type": "Text",
            "name": "Type 2",
            "operation": "ToString",
          },
          Object {
            "data_type": "Text",
            "name": "Type 1",
            "operation": "ToString",
          },
          Object {
            "data_type": "Text",
            "name": "Name",
            "operation": "ToString",
          },
          Object {
            "data_type": "Number",
            "name": "Pokemon No_",
            "operation": "ToInteger",
          },
        ],
        "contentEdited": false,
        "createdAt": 2017-12-26T21:43:10.707Z,
        "createdFields": Array [],
        "customFieldsToProcess": Array [],
        "dirty": 0,
        "fe_displayTitleOverrides": Object {
          "Type 1": "Type1_overridden",
        },
        "fe_excludeFields": Object {
          "Image URL": false,
          "Max CP": false,
          "Max HP": false,
          "Name": false,
          "Pokemon No_": false,
          "Type 1": false,
          "Type 2": false,
        },
        "fe_excludeFieldsObjDetail": Object {
          "Image URL": false,
          "Max CP": false,
          "Max HP": false,
          "Name": false,
          "Pokemon No_": false,
          "Type 1": false,
          "Type 2": false,
        },
        "fe_fieldDisplayOrder": Array [],
        "fe_filters": Object {
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_image": Object {
          "detailView": true,
          "field": "",
          "gallery": true,
          "overwrite": false,
          "scraped": false,
          "timeline": true,
        },
        "fe_listed": true,
        "fe_nestedObject": Object {
          "fields": Array [],
        },
        "fe_viewOptions": Object {
          "enableAccessibility": false,
          "enableLastUpdated": false,
          "filtersRail": true,
          "fullscreenExpand": true,
          "insightsExplorer": true,
          "insightsExplorerEmbed": true,
          "search": true,
          "viewControls": true,
          "viewInteractivity": true,
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Image URL",
              "visible": true,
            },
            "pieChart": Object {
              "defaultGroupByColumnName": "Name",
              "visible": true,
            },
            "pieSet": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Type 1",
              "defaultGroupByColumnName": "Type 2",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "valuesToExcludeByOriginalKey": Array [],
              "visible": true,
            },
            "timeline": Object {
              "visible": true,
            },
            "treemap": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Name",
              "defaultGroupByColumnName": "Type 1",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "visible": true,
            },
          },
        },
        "fe_visible": true,
        "fileName": "pokemonGO.csv",
        "firstImport": 0,
        "format": "CSV",
        "importRevision": 1,
        "imported": true,
        "includeEmptyFields": true,
        "isPublic": true,
        "jobId": 0,
        "lastImportInitiatedBy": null,
        "lastImportTriggeredBy": "manual",
        "objectTitle": "Pokemon No_",
        "openDownload": false,
        "preserveEditedData": true,
        "previous_datasets": Array [],
        "raw_rowObjects_coercionScheme": Object {
          "Image URL": Object {
            "operation": "ToString",
          },
          "Max CP": Object {
            "operation": "ToInteger",
          },
          "Max HP": Object {
            "operation": "ToInteger",
          },
          "Name": Object {
            "operation": "ToString",
          },
          "Pokemon No_": Object {
            "operation": "ToInteger",
          },
          "Type 1": Object {
            "operation": "ToString",
          },
          "Type 2": Object {
            "operation": "ToString",
          },
        },
        "relationshipFields": Array [],
        "replaced": false,
        "replacement": false,
        "sample": false,
        "skipImageScraping": false,
        "state": "approved",
        "tabDestination": 0,
        "title": "Pokemon",
        "uid": "pokemon",
        "updatedAt": 2017-12-26T21:44:14.849Z,
        "updatedBy": "5a42bf07d3bc0b20648290e0",
        "updatedContent": Object {
          "new": true,
        },
        "urls": Array [],
      },
      "isPublic": true,
      "sharedPages": Array [
        Object {
          "__v": 0,
          "_id": "5af05bbf497f90062e8caeb9",
          "dataset": "5a42c26e303770207ce8f83b",
          "dateCreated": 2018-05-15T13:15:44.853Z,
          "other": null,
          "pageType": "array_view",
          "queryString": "",
          "rowObjectId": null,
          "viewType": "gallery",
        },
      ],
      "title": "Lorem ipsum",
      "updatedAt": 2018-05-25T09:55:53.574Z,
      "updatedBy": "5a42bf07d3bc0b20648290e0",
    },
  ],
  "routePath_base": "/",
  "totalInsightsPages": 1,
  "totalVizPages": 1,
  "user": Object {
    "__v": 0,
    "_articleEditors": Array [],
    "_articleViewers": Array [],
    "_editors": Array [],
    "_id": "5ab5871c31448268115a26a3",
    "_siteEditors": Array [],
    "_siteViewers": Array [],
    "_team": Array [
      "5ab2eeae4bc18d296ba983d6",
    ],
    "_viewers": Array [],
    "activated": false,
    "active": true,
    "canCreateNewArticle": Array [],
    "canCreateNewSite": Array [],
    "canCreateNewViz": Array [],
    "createdAt": 2017-12-15T23:02:25.367Z,
    "defaultLoginTeam": Object {
      "__v": 0,
      "_id": "5ab2eeae4bc18d296ba983d6",
      "admin": Array [
        "5ab2ee9c4bc18d296ba983d5",
      ],
      "brandColor": Object {
        "label": "#2A2A2A",
        "select": "#2A2A2A",
      },
      "colorPalette": Array [
        "#1B6DFC",
        "#0CB7FA",
        "#FA79FC",
        "#FB3705",
        "#F9D307",
        "#FA9007",
        "#7D5807",
        "#B2E606",
        "#069908",
        "#7B07FD",
      ],
      "createdAt": 2017-12-26T21:29:20.384Z,
      "datasourceDescriptions": Array [],
      "font": "calibre",
      "hasEnterpriseLicense": false,
      "pages": Array [],
      "sites": Array [],
      "subdomain": "third",
      "superTeam": true,
      "title": "Third one",
      "updatedAt": 2017-12-26T21:43:10.717Z,
    },
    "email": "john+schemadesign.com@gmail.com",
    "firstName": "John",
    "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
    "lastName": "Haxxor",
    "lockUntil": 1,
    "loginAttempts": 0,
    "provider": "local",
    "salt": "test",
    "sampleImported": false,
    "signedUp": false,
    "updatedAt": 2017-12-15T23:02:25.367Z,
  },
  "viewBy": Object {
    "articles": "",
    "insights": "",
    "visualizations": "active",
  },
  "visualizations": Array [
    Object {
      "_id": "5a42fd33999d2a26d50fea65",
      "admin": CoreMongooseArray [
        "5a42fb9e29232d26d47136dc",
      ],
      "author": "Maitland McConnell",
      "banner": undefined,
      "baseUrl": "http://user.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-27T01:53:55.855Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 0,
      "key": "simpsons",
      "query": "",
      "sourceDoc": null,
      "subdomain": "user",
      "teamTitle": "Maitland McConnell",
      "title": "Simpsons",
      "updatedAt": 2017-12-27T01:56:05.354Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
    Object {
      "_id": "5a42c26e303770207ce8f83b",
      "admin": CoreMongooseArray [
        "5a42bf07d3bc0b20648290e0",
      ],
      "author": "Glitter",
      "banner": undefined,
      "baseUrl": "http://glitter.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-26T21:43:10.707Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 1,
      "key": "pokemon",
      "query": "",
      "sourceDoc": Object {
        "__v": 0,
        "_id": "5c498ae370a576d9415e8d77",
        "dateOfLastImport": 2019-01-24T09:52:35.201Z,
        "numberOfRows": 250,
        "primaryKey": "5a42c26e303770207ce8f83b",
      },
      "subdomain": "glitter",
      "teamTitle": "Glitter",
      "title": "Pokemon",
      "updatedAt": 2017-12-26T21:44:14.849Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
        "pieChart": Object {
          "displayAs": "Pie Chart",
          "visible": true,
        },
        "pieSet": Object {
          "displayAs": "Pie Set",
          "visible": true,
        },
        "timeline": Object {
          "displayAs": "Grouped Gallery",
          "visible": true,
        },
        "treemap": Object {
          "displayAs": "Treemap",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
    Object {
      "_id": "5b033d8d2a54a24d161a9c9b",
      "admin": CoreMongooseArray [
        "5ab2ee9c4bc18d296ba983d5",
      ],
      "author": "Fourth one",
      "banner": undefined,
      "baseUrl": "http://fourth.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-26T21:43:10.707Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 0,
      "key": "pokemon",
      "query": "",
      "sourceDoc": null,
      "subdomain": "fourth",
      "teamTitle": "Fourth one",
      "title": "Pokemon",
      "updatedAt": 2017-12-26T21:44:14.849Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
  ],
}
`;

exports[`Data Preparation: Index BindData should prepare showcase data properly when filters enabled 1`] = `
Object {
  "articles": Array [
    Object {
      "__v": 0,
      "_id": "aaa26b456f8073766713bcef",
      "createdAt": 2018-04-02T17:41:25.642Z,
      "createdBy": Object {
        "firstName": "Maitland",
        "lastName": "McConnell",
      },
      "displayOnExplorePage": true,
      "displayOnTeamPage": true,
      "isArticle": true,
      "pageTitle": "Public Article",
      "parsedBody": "<p>Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane&#39;s-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.</p>
",
      "published": true,
      "rawBody": "Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane's-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.",
      "slug": "public-article",
      "state": "approved",
      "team": Object {
        "subdomain": "glitter",
      },
      "updatedAt": 2018-04-02T17:43:35.176Z,
      "website": Object {
        "slug": "user",
      },
    },
  ],
  "currentInsightsPage": 1,
  "currentVizPage": 1,
  "displayTitleOverrides": Object {
    "teamName": "Team",
    "vizName": "Visualization",
  },
  "env": Object {
    "DO_S3_BUCKET": "arraystesting",
    "FE_LIVERELOAD": "true",
    "FE_UNPROCESSEDCSS": "true",
    "MIXPANEL_TOKEN": "test",
    "NODE_ENV": "testing",
  },
  "filterObj": Object {
    "vizName": Array [
      "Simpsons",
    ],
  },
  "globalLibraries": Array [
    "vendors/jquery/dist/jquery.min.js",
  ],
  "has_google_analytics": false,
  "insights": Array [],
  "routePath_base": "/",
  "totalInsightsPages": 0,
  "totalVizPages": 1,
  "user": null,
  "viewBy": Object {
    "articles": "",
    "insights": "",
    "visualizations": "active",
  },
  "visualizations": Array [
    Object {
      "_id": "5a42fd33999d2a26d50fea65",
      "admin": CoreMongooseArray [
        "5a42fb9e29232d26d47136dc",
      ],
      "author": "Maitland McConnell",
      "banner": undefined,
      "baseUrl": "http://user.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-27T01:53:55.855Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 0,
      "key": "simpsons",
      "query": "",
      "sourceDoc": null,
      "subdomain": "user",
      "teamTitle": "Maitland McConnell",
      "title": "Simpsons",
      "updatedAt": 2017-12-27T01:56:05.354Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
  ],
}
`;

exports[`Data Preparation: Index BindData should prepare showcase data properly when process.env.SUBTEAMS is set 1`] = `
Object {
  "articles": Array [
    Object {
      "__v": 0,
      "_id": "aaa26b456f8073766713bcef",
      "createdAt": 2018-04-02T17:41:25.642Z,
      "createdBy": Object {
        "firstName": "Maitland",
        "lastName": "McConnell",
      },
      "displayOnExplorePage": true,
      "displayOnTeamPage": true,
      "isArticle": true,
      "pageTitle": "Public Article",
      "parsedBody": "<p>Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane&#39;s-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.</p>
",
      "published": true,
      "rawBody": "Snake head sea holly sweet pea cuckooflower anemone flower. Scarlet plume obedient plant flamingo flower primrose. Feverfew amaryllis bloom cosmos china aster. Spurge larkspur bloody crane's-bill marguerite sweet sultan. Blossom cowbane grass of parnassus, bellflower. Bearberry, singapore orchid chickweed Kansas feather loose strife tuberose. Lisianthus, rosebay willowherb round-leaved sundew peony tasmanian blue gum foxtail lily. Love lies bleeding.",
      "slug": "public-article",
      "state": "approved",
      "team": Object {
        "subdomain": "glitter",
      },
      "updatedAt": 2018-04-02T17:43:35.176Z,
      "website": Object {
        "slug": "user",
      },
    },
  ],
  "currentInsightsPage": 1,
  "currentVizPage": 1,
  "displayTitleOverrides": Object {
    "teamName": "Team",
    "vizName": "Visualization",
  },
  "env": Object {
    "DO_S3_BUCKET": "arraystesting",
    "FE_LIVERELOAD": "true",
    "FE_UNPROCESSEDCSS": "true",
    "MIXPANEL_TOKEN": "test",
    "NODE_ENV": "testing",
  },
  "filterObj": Object {},
  "globalLibraries": Array [
    "vendors/jquery/dist/jquery.min.js",
  ],
  "has_google_analytics": false,
  "insights": Array [
    Object {
      "__v": 0,
      "_id": "5b07dda988cb1bf4d76b64bd",
      "caption": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.",
      "createdAt": 2018-05-25T09:55:53.574Z,
      "createdBy": Object {
        "__v": 0,
        "_articleEditors": Array [],
        "_articleViewers": Array [],
        "_editors": Array [],
        "_id": "5a42bf07d3bc0b20648290e0",
        "_siteEditors": Array [],
        "_siteViewers": Array [],
        "_team": Array [
          "5a42bf30d3bc0b20648290e1",
        ],
        "_viewers": Array [],
        "activated": true,
        "active": true,
        "canCreateNewArticle": Array [],
        "canCreateNewSite": Array [],
        "canCreateNewViz": Array [],
        "createdAt": 2017-12-26T21:28:39.946Z,
        "defaultLoginTeam": "5a42bf30d3bc0b20648290e1",
        "email": "user@schemadesign.com",
        "firstName": "Maitland",
        "hash": "dc449e96c930ca46653ec867c448719fab39dd85c4b91c1643d2faad140f24e711da13133e34ee4da0d3a5a2ca154edd4bfaeb9cf80cb9af57bce4d7ea1b94ce",
        "lastName": "McConnell",
        "lockUntil": 1,
        "loginAttempts": 0,
        "provider": "local",
        "salt": "test",
        "sampleImported": false,
        "signedUp": false,
        "updatedAt": 2017-12-26T21:36:31.420Z,
      },
      "datasourceDescription": Object {
        "JSONPath": "undefined",
        "__v": 0,
        "_id": "5a42c26e303770207ce8f83b",
        "_otherSources": Array [],
        "_team": Object {
          "__v": 0,
          "_id": "5a42bf30d3bc0b20648290e1",
          "admin": Array [
            "5a42bf07d3bc0b20648290e0",
          ],
          "brandColor": Object {
            "label": "#2A2A2A",
            "select": "#2A2A2A",
          },
          "colorPalette": Array [
            "#1B6DFC",
            "#0CB7FA",
            "#FA79FC",
            "#FB3705",
            "#F9D307",
            "#FA9007",
            "#7D5807",
            "#B2E606",
            "#069908",
            "#7B07FD",
          ],
          "createdAt": 2017-12-26T21:29:20.384Z,
          "datasourceDescriptions": Array [
            "5a42c26e303770207ce8f83b",
            "5b033d64ef29594d18bb18aa",
          ],
          "font": "calibre",
          "hasEnterpriseLicense": false,
          "pages": Array [
            "5ac26b456f8073766713bcee",
            "5ac26b3d6f8073766713bced",
            "5ac26b506f8073766713bcef",
            "5ac26b636f8073766713bcf0",
            "aaa26b456f8073766713bcee",
          ],
          "sites": Array [],
          "subdomain": "glitter",
          "superTeam": true,
          "title": "Glitter",
          "updatedAt": 2017-12-26T21:43:10.717Z,
        },
        "author": "5a42bf07d3bc0b20648290e0",
        "brandColor": Object {
          "accent": "#005CB5",
        },
        "clones": 0,
        "columns": Array [
          Object {
            "data_type": "Text",
            "name": "Image URL",
            "operation": "ToString",
          },
          Object {
            "data_type": "Number",
            "name": "Max HP",
            "operation": "ToInteger",
          },
          Object {
            "data_type": "Number",
            "name": "Max CP",
            "operation": "ToInteger",
          },
          Object {
            "data_type": "Text",
            "name": "Type 2",
            "operation": "ToString",
          },
          Object {
            "data_type": "Text",
            "name": "Type 1",
            "operation": "ToString",
          },
          Object {
            "data_type": "Text",
            "name": "Name",
            "operation": "ToString",
          },
          Object {
            "data_type": "Number",
            "name": "Pokemon No_",
            "operation": "ToInteger",
          },
        ],
        "contentEdited": false,
        "createdAt": 2017-12-26T21:43:10.707Z,
        "createdFields": Array [],
        "customFieldsToProcess": Array [],
        "dirty": 0,
        "fe_displayTitleOverrides": Object {
          "Type 1": "Type1_overridden",
        },
        "fe_excludeFields": Object {
          "Image URL": false,
          "Max CP": false,
          "Max HP": false,
          "Name": false,
          "Pokemon No_": false,
          "Type 1": false,
          "Type 2": false,
        },
        "fe_excludeFieldsObjDetail": Object {
          "Image URL": false,
          "Max CP": false,
          "Max HP": false,
          "Name": false,
          "Pokemon No_": false,
          "Type 1": false,
          "Type 2": false,
        },
        "fe_fieldDisplayOrder": Array [],
        "fe_filters": Object {
          "excludeFields": Array [],
          "fabricated": Array [],
          "fieldsAsRangeSlider": Array [],
          "fieldsCommaSeparatedAsIndividual": Array [],
          "fieldsMultiSelectable": Array [],
          "fieldsNotAvailable": Array [],
          "fieldsSortableByInteger": Array [],
          "fieldsSortableInReverseOrder": Array [],
          "keywords": Array [],
          "valuesToExcludeByOriginalKey": Object {
            "_all": Array [],
          },
        },
        "fe_image": Object {
          "detailView": true,
          "field": "",
          "gallery": true,
          "overwrite": false,
          "scraped": false,
          "timeline": true,
        },
        "fe_listed": true,
        "fe_nestedObject": Object {
          "fields": Array [],
        },
        "fe_viewOptions": Object {
          "enableAccessibility": false,
          "enableLastUpdated": false,
          "filtersRail": true,
          "fullscreenExpand": true,
          "insightsExplorer": true,
          "insightsExplorerEmbed": true,
          "search": true,
          "viewControls": true,
          "viewInteractivity": true,
        },
        "fe_views": Object {
          "default_view": "gallery",
          "views": Object {
            "gallery": Object {
              "defaultSortByColumnName": "Image URL",
              "visible": true,
            },
            "pieChart": Object {
              "defaultGroupByColumnName": "Name",
              "visible": true,
            },
            "pieSet": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Type 1",
              "defaultGroupByColumnName": "Type 2",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "valuesToExcludeByOriginalKey": Array [],
              "visible": true,
            },
            "timeline": Object {
              "visible": true,
            },
            "treemap": Object {
              "defaultAggregateByColumnName": "Max HP",
              "defaultChartByColumnName": "Name",
              "defaultGroupByColumnName": "Type 1",
              "fieldsNotAvailableAsAggregateByColumns": Array [],
              "fieldsNotAvailableAsChartByColumns": Array [],
              "fieldsNotAvailableAsGroupByColumns": Array [],
              "visible": true,
            },
          },
        },
        "fe_visible": true,
        "fileName": "pokemonGO.csv",
        "firstImport": 0,
        "format": "CSV",
        "importRevision": 1,
        "imported": true,
        "includeEmptyFields": true,
        "isPublic": true,
        "jobId": 0,
        "lastImportInitiatedBy": null,
        "lastImportTriggeredBy": "manual",
        "objectTitle": "Pokemon No_",
        "openDownload": false,
        "preserveEditedData": true,
        "previous_datasets": Array [],
        "raw_rowObjects_coercionScheme": Object {
          "Image URL": Object {
            "operation": "ToString",
          },
          "Max CP": Object {
            "operation": "ToInteger",
          },
          "Max HP": Object {
            "operation": "ToInteger",
          },
          "Name": Object {
            "operation": "ToString",
          },
          "Pokemon No_": Object {
            "operation": "ToInteger",
          },
          "Type 1": Object {
            "operation": "ToString",
          },
          "Type 2": Object {
            "operation": "ToString",
          },
        },
        "relationshipFields": Array [],
        "replaced": false,
        "replacement": false,
        "sample": false,
        "skipImageScraping": false,
        "state": "approved",
        "tabDestination": 0,
        "title": "Pokemon",
        "uid": "pokemon",
        "updatedAt": 2017-12-26T21:44:14.849Z,
        "updatedBy": "5a42bf07d3bc0b20648290e0",
        "updatedContent": Object {
          "new": true,
        },
        "urls": Array [],
      },
      "isPublic": true,
      "sharedPages": Array [
        Object {
          "__v": 0,
          "_id": "5af05bbf497f90062e8caeb9",
          "dataset": "5a42c26e303770207ce8f83b",
          "dateCreated": 2018-05-15T13:15:44.853Z,
          "other": null,
          "pageType": "array_view",
          "queryString": "",
          "rowObjectId": null,
          "viewType": "gallery",
        },
      ],
      "title": "Lorem ipsum",
      "updatedAt": 2018-05-25T09:55:53.574Z,
      "updatedBy": "5a42bf07d3bc0b20648290e0",
    },
  ],
  "routePath_base": "/",
  "totalInsightsPages": 1,
  "totalVizPages": 1,
  "user": null,
  "viewBy": Object {
    "articles": "active",
    "insights": "",
    "visualizations": "",
  },
  "visualizations": Array [
    Object {
      "_id": "5a42fd33999d2a26d50fea65",
      "admin": CoreMongooseArray [
        "5a42fb9e29232d26d47136dc",
      ],
      "author": "Maitland McConnell",
      "banner": undefined,
      "baseUrl": "http://user.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-27T01:53:55.855Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 0,
      "key": "simpsons",
      "query": "",
      "sourceDoc": null,
      "subdomain": "user",
      "teamTitle": "Maitland McConnell",
      "title": "Simpsons",
      "updatedAt": 2017-12-27T01:56:05.354Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
    Object {
      "_id": "5a42c26e303770207ce8f83b",
      "admin": CoreMongooseArray [
        "5a42bf07d3bc0b20648290e0",
      ],
      "author": "Glitter",
      "banner": undefined,
      "baseUrl": "http://glitter.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-26T21:43:10.707Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 1,
      "key": "pokemon",
      "query": "",
      "sourceDoc": Object {
        "__v": 0,
        "_id": "5c498ae370a576d9415e8d77",
        "dateOfLastImport": 2019-01-24T09:52:35.201Z,
        "numberOfRows": 250,
        "primaryKey": "5a42c26e303770207ce8f83b",
      },
      "subdomain": "glitter",
      "teamTitle": "Glitter",
      "title": "Pokemon",
      "updatedAt": 2017-12-26T21:44:14.849Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
        "pieChart": Object {
          "displayAs": "Pie Chart",
          "visible": true,
        },
        "pieSet": Object {
          "displayAs": "Pie Set",
          "visible": true,
        },
        "timeline": Object {
          "displayAs": "Grouped Gallery",
          "visible": true,
        },
        "treemap": Object {
          "displayAs": "Treemap",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
    Object {
      "_id": "5b033d8d2a54a24d161a9c9b",
      "admin": CoreMongooseArray [
        "5ab2ee9c4bc18d296ba983d5",
      ],
      "author": "Fourth one",
      "banner": undefined,
      "baseUrl": "http://fourth.local.arrays.co",
      "brandColor": Object {
        "accent": "#005CB5",
      },
      "createdAt": 2017-12-26T21:43:10.707Z,
      "default_view": "gallery",
      "description": undefined,
      "globalLibraries": Array [
        "vendors/jquery/dist/jquery.min.js",
      ],
      "insightsCount": 0,
      "key": "pokemon",
      "query": "",
      "sourceDoc": null,
      "subdomain": "fourth",
      "teamTitle": "Fourth one",
      "title": "Pokemon",
      "updatedAt": 2017-12-26T21:44:14.849Z,
      "urls": CoreMongooseArray [],
      "view_visibility": Object {
        "gallery": Object {
          "displayAs": "Gallery",
          "visible": true,
        },
      },
      "vizType": undefined,
    },
  ],
}
`;
